[package]
name = "dons-protect"
version = "0.1.0"
edition = "2021"
authors = ["Jake Abendroth"]
description = "A transparent desktop VPN client for USF, replacing the official GlobalProtect client"
license = "MIT"
repository = "https://github.com/jabendroth/DonsProtect"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
urlencoding = "2"
quick-xml = { version = "0.31", features = ["serialize"] }
